<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mobile_navigation"
	app:startDestination="@+id/navigation_home">

	<fragment
		android:id="@+id/navigation_home"
		android:name="com.wordpress.lochindev.ramazon_taqvimi.ui.fragment.HomeFragment"
		android:label="@string/title_home"
		tools:layout="@layout/fragment_home" />

	<fragment
		android:id="@+id/navigation_dashboard"
		android:name="com.wordpress.lochindev.ramazon_taqvimi.ui.fragment.CalendarFragment"
		android:label="@string/title_dashboard"
		tools:layout="@layout/fragment_calendar" />

	<fragment
		android:id="@+id/navigation_notifications"
		android:name="com.wordpress.lochindev.ramazon_taqvimi.ui.fragment.SettingsFragment"
		android:label="@string/title_notifications"
		tools:layout="@layout/fragment_settings" />
	<fragment
		android:id="@+id/duolarFragment"
		android:name="com.wordpress.lochindev.ramazon_taqvimi.ui.fragment.DuolarFragment"
		android:label="fragment_duolar"
		tools:layout="@layout/fragment_duolar" />
</navigation>